--- a/brain_tumor_segmentation_using_unet.ipynb
+++ b/brain_tumor_segmentation_using_unet.ipynb
@@ -12,63 +12,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# IGNORE THIS STEP IF YOU HAVE DIRECTLY UPLOADED THE ZIPPED FILE ON COLAB\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "silAX_xgoWF8"
+      },
+      "id": "silAX_xgoWF8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "7uhFAdlJorIq"
       },
       "outputs": [],
       "source": [
-        "# variables \n",
-        "# zip_file_path = '/content/drive/MyDrive/masters/second semester/advance topic in machine learning/archive.zip'\n",
-        "# destination_path = 'brain_tumor_images'\n",
-        "# input_path = 'brain_tumor_images/archive/segmentation/'\n",
-        "# model_path = 'unet.hdf5'\n",
-        "# train_result_file_path = 'train_history_info.csv'\n",
-        "# test_result_file_path = 'test_history_info.csv'\n",
-        "# loss_img = 'loss_function.png'\n",
-        "# dsc_img = 'dice_coeff.png'\n",
-        "# iou_img = 'jaccard_coeff.png'\n",
-        "\n",
-        "\n",
-        "\n",
-        "# variables \n",
-        "zip_file_path = \"/content/drive/MyDrive/advance topic in ml/archive.zip\"\n",
-        "destination_path = '/content/brain_tumor_images'\n",
+        "# IF YOU HAVE UPLOADED THE DATA IN GOOGLE DRIVE\n",
+        "zip_file_path = \"path/to/zip/file\"\n",
+        "destination_path = 'brain_tumor_images'\n",
         "input_path = 'brain_tumor_images/archive/segmentation/'\n",
-        "model_path = '/content/drive/MyDrive/advance topic in ml/may_2_unet.hdf5'\n",
-        "train_result_file_path = '/content/drive/MyDrive/advance topic in ml/may_2_loss_function_train.csv'\n",
-        "test_result_file_path = '/content/drive/MyDrive/advance topic in ml/may_2_loss_function_test.csv'\n",
-        "loss_img = '/content/drive/MyDrive/advance topic in ml/may_2_loss_function.png'\n",
-        "dsc_img = '/content/drive/MyDrive/advance topic in ml/may_2_dice_coeff.png'\n",
-        "iou_img = '/content/drive/MyDrive/advance topic in ml/may_2_iou.png'\n",
+        "model_path = 'unet.hdf5'\n",
+        "train_result_file_path = 'train_history_info.csv'\n",
+        "test_result_file_path = 'test_history_info.csv'\n",
+        "loss_img = 'loss_function.png'\n",
+        "dsc_img = 'dice_coeff.png'\n",
+        "iou_img = 'jaccard_coeff.png'\n",
         "\n"
       ],
       "id": "7uhFAdlJorIq"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CrmHGeJPAqbA",
-        "outputId": "c0542e74-81e9-40e0-db68-b012a2b878f7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "id": "CrmHGeJPAqbA"
     },
     {
       "cell_type": "code",
